[gd_scene load_steps=12 format=3 uid="uid://dnw8l88q5vgm3"]

[ext_resource type="Script" uid="uid://ce2g72in81qs6" path="res://scripts/control_node_and_balls/ball.gd" id="1_yo1i0"]
[ext_resource type="Script" uid="uid://cmlfnal2o37ys" path="res://addons/godot_state_charts/state_chart.gd" id="2_nqqko"]
[ext_resource type="Script" uid="uid://duu2hhmogs378" path="res://addons/godot_state_charts/parallel_state.gd" id="3_bytmq"]
[ext_resource type="Script" uid="uid://bhy7it06w5oxr" path="res://addons/godot_state_charts/compound_state.gd" id="4_y807d"]
[ext_resource type="Script" uid="uid://c4v4mvc2ioxvi" path="res://scripts/control_node_and_balls/states/ball_physics_states.gd" id="5_msp2j"]
[ext_resource type="Script" uid="uid://b2onxl0bnlyi7" path="res://addons/godot_state_charts/atomic_state.gd" id="6_tr3yh"]
[ext_resource type="Script" uid="uid://g3cjsxu4h2a2" path="res://addons/godot_state_charts/transition.gd" id="7_4jgtx"]
[ext_resource type="Script" uid="uid://nhccnfamid2u" path="res://scripts/control_node_and_balls/states/ball_control_states.gd" id="8_q404i"]
[ext_resource type="PhysicsMaterial" uid="uid://besahl7f6jbkx" path="res://resources/ball_physics_material.tres" id="9_qsj31"]
[ext_resource type="Script" uid="uid://cic2t11pr7yp1" path="res://scripts/inert_node.gd" id="10_k38ye"]

[sub_resource type="SphereShape3D" id="SphereShape3D_8bm52"]
radius = 0.152058

[node name="BallBase" type="Node3D" node_paths=PackedStringArray("physics_states", "control_states")]
script = ExtResource("1_yo1i0")
physics_states = NodePath("State/Root/Physics/Physics States")
control_states = NodePath("State/Root/Control/Control States")

[node name="State" type="Node" parent="."]
script = ExtResource("2_nqqko")

[node name="Root" type="Node" parent="State"]
script = ExtResource("3_bytmq")
metadata/_custom_type_script = "uid://duu2hhmogs378"

[node name="Physics" type="Node" parent="State/Root"]
script = ExtResource("4_y807d")
initial_state = NodePath("rigid")

[node name="Physics States" type="Node" parent="State/Root/Physics" node_paths=PackedStringArray("ball", "sc")]
script = ExtResource("5_msp2j")
ball = NodePath("../../../..")
sc = NodePath("../../..")

[node name="rigid" type="Node" parent="State/Root/Physics"]
script = ExtResource("6_tr3yh")

[node name="to char" type="Node" parent="State/Root/Physics/rigid"]
script = ExtResource("7_4jgtx")
to = NodePath("../../char")
event = &"Physics: to char"
delay_in_seconds = "0.0"

[node name="char" type="Node" parent="State/Root/Physics"]
script = ExtResource("6_tr3yh")

[node name="to rigid" type="Node" parent="State/Root/Physics/char"]
script = ExtResource("7_4jgtx")
to = NodePath("../../rigid")
event = &"Physics: to rigid"
delay_in_seconds = "0.0"

[node name="Control" type="Node" parent="State/Root"]
script = ExtResource("4_y807d")
initial_state = NodePath("free")

[node name="Control States" type="Node" parent="State/Root/Control" node_paths=PackedStringArray("ball", "sc")]
script = ExtResource("8_q404i")
ball = NodePath("../../../..")
sc = NodePath("../../..")

[node name="free" type="Node" parent="State/Root/Control"]
script = ExtResource("6_tr3yh")

[node name="to dribbled" type="Node" parent="State/Root/Control/free"]
script = ExtResource("7_4jgtx")
to = NodePath("../../dribbled")
event = &"Control: free to dribbled"
delay_in_seconds = "0.0"

[node name="to held" type="Node" parent="State/Root/Control/free"]
script = ExtResource("7_4jgtx")
to = NodePath("../../held")
event = &"Control: free to held"
delay_in_seconds = "0.0"

[node name="dribbled" type="Node" parent="State/Root/Control"]
script = ExtResource("6_tr3yh")

[node name="to free" type="Node" parent="State/Root/Control/dribbled"]
script = ExtResource("7_4jgtx")
to = NodePath("../../free")
event = &"Control: to free"
delay_in_seconds = "0.0"

[node name="held" type="Node" parent="State/Root/Control"]
script = ExtResource("6_tr3yh")

[node name="to free" type="Node" parent="State/Root/Control/held"]
script = ExtResource("7_4jgtx")
to = NodePath("../../free")
event = &"Control: to free"
delay_in_seconds = "0.0"

[node name="RigidNode" type="RigidBody3D" parent="."]
collision_layer = 4
collision_mask = 1802
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
physics_material_override = ExtResource("9_qsj31")
can_sleep = false
contact_monitor = true
max_contacts_reported = 1
angular_damp = 3.0
script = ExtResource("10_k38ye")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidNode"]
shape = SubResource("SphereShape3D_8bm52")

[node name="CharNode" type="CharacterBody3D" parent="."]
collision_layer = 4
collision_mask = 1802
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharNode"]
shape = SubResource("SphereShape3D_8bm52")

[node name="TrackTransformContainer" type="Node3D" parent="."]

[node name="TrackPositionContainer" type="Node3D" parent="."]

[connection signal="state_entered" from="State/Root/Physics/rigid" to="State/Root/Physics/Physics States" method="_on_rigid_state_entered"]
[connection signal="state_exited" from="State/Root/Physics/rigid" to="State/Root/Physics/Physics States" method="_on_rigid_state_exited"]
[connection signal="state_physics_processing" from="State/Root/Physics/rigid" to="State/Root/Physics/Physics States" method="_on_rigid_state_physics_processing"]
[connection signal="state_entered" from="State/Root/Physics/char" to="State/Root/Physics/Physics States" method="_on_char_state_entered"]
[connection signal="state_exited" from="State/Root/Physics/char" to="State/Root/Physics/Physics States" method="_on_char_state_exited"]
[connection signal="state_physics_processing" from="State/Root/Physics/char" to="State/Root/Physics/Physics States" method="_on_char_state_physics_processing"]
[connection signal="state_entered" from="State/Root/Control/free" to="State/Root/Control/Control States" method="_on_free_state_entered"]
[connection signal="state_entered" from="State/Root/Control/dribbled" to="State/Root/Control/Control States" method="_on_dribbled_state_entered"]
[connection signal="state_exited" from="State/Root/Control/dribbled" to="State/Root/Control/Control States" method="_on_dribbled_state_exited"]
[connection signal="state_physics_processing" from="State/Root/Control/dribbled" to="State/Root/Control/Control States" method="_on_dribbled_state_physics_processing"]
[connection signal="state_entered" from="State/Root/Control/held" to="State/Root/Control/Control States" method="_on_held_state_entered"]
